fixed overlapping

--- a/css/main.css
+++ b/css/main.css
@@ -441,13 +441,15 @@ footer p {
         position: relative;
         z-index: 1;
         justify-content:center;
+        backface-visibility:hidden;
     }
 
     .card-flip .back {
         position: relative;
         z-index: 0;
         transform: rotateY(-180deg);
-        padding:5%;
+        padding: 5%;
+        backface-visibility: hidden;
     }
     .back{
         padding:12px;
